Termin4/Aufgabe 4/calc++-parser.output
Grammatik

    0 $accept: unit "end of file"

    1 unit: assignments exp

    2 assignments: %empty
    3            | assignments assignment

    4 assignment: "identifier" ":=" exp

    5 exp: exp "+" exp
    6    | exp "-" exp
    7    | exp "*" exp
    8    | exp "/" exp
    9    | "(" exp ")"
   10    | "identifier"
   11    | "number"
   12    | "zahl"
   13    | "sign"
   14    | "text"


Terminale und die Regeln, in denen sie verwendet werden

"end of file" (0) 0
error (256)
":=" (258) 4
"-" (259) 6
"+" (260) 5
"*" (261) 7
"/" (262) 8
"(" (263) 9
")" (264) 9
"identifier" (265) 4 10
"number" (266) 11
"text" (267) 14
"zahl" (268) 12
"sign" (269) 13


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (15)
    auf der linken Seite: 0
unit (16)
    auf der linken Seite: 1, auf der rechten Seite: 0
assignments (17)
    auf der linken Seite: 2 3, auf der rechten Seite: 1 3
assignment (18)
    auf der linken Seite: 4, auf der rechten Seite: 3
exp (19)
    auf der linken Seite: 5 6 7 8 9 10 11 12 13 14, auf der rechten Seite:
    1 4 5 6 7 8 9


Zustand 0

    0 $accept: . unit "end of file"

    $default  reduziere mit Regel 2 (assignments)

    unit         gehe zu Zustand 1 über
    assignments  gehe zu Zustand 2 über


Zustand 1

    0 $accept: unit . "end of file"

    "end of file"  schiebe und gehe zu Zustand 3 über


Zustand 2

    1 unit: assignments . exp
    3 assignments: assignments . assignment

    "("           schiebe und gehe zu Zustand 4 über
    "identifier"  schiebe und gehe zu Zustand 5 über
    "number"      schiebe und gehe zu Zustand 6 über
    "text"        schiebe und gehe zu Zustand 7 über
    "zahl"        schiebe und gehe zu Zustand 8 über
    "sign"        schiebe und gehe zu Zustand 9 über

    assignment  gehe zu Zustand 10 über
    exp         gehe zu Zustand 11 über


Zustand 3

    0 $accept: unit "end of file" .

    $default  annehmen


Zustand 4

    9 exp: "(" . exp ")"

    "("           schiebe und gehe zu Zustand 4 über
    "identifier"  schiebe und gehe zu Zustand 12 über
    "number"      schiebe und gehe zu Zustand 6 über
    "text"        schiebe und gehe zu Zustand 7 über
    "zahl"        schiebe und gehe zu Zustand 8 über
    "sign"        schiebe und gehe zu Zustand 9 über

    exp  gehe zu Zustand 13 über


Zustand 5

    4 assignment: "identifier" . ":=" exp
   10 exp: "identifier" .

    ":="  schiebe und gehe zu Zustand 14 über

    $default  reduziere mit Regel 10 (exp)


Zustand 6

   11 exp: "number" .

    $default  reduziere mit Regel 11 (exp)


Zustand 7

   14 exp: "text" .

    $default  reduziere mit Regel 14 (exp)


Zustand 8

   12 exp: "zahl" .

    $default  reduziere mit Regel 12 (exp)


Zustand 9

   13 exp: "sign" .

    $default  reduziere mit Regel 13 (exp)


Zustand 10

    3 assignments: assignments assignment .

    $default  reduziere mit Regel 3 (assignments)


Zustand 11

    1 unit: assignments exp .
    5 exp: exp . "+" exp
    6    | exp . "-" exp
    7    | exp . "*" exp
    8    | exp . "/" exp

    "-"  schiebe und gehe zu Zustand 15 über
    "+"  schiebe und gehe zu Zustand 16 über
    "*"  schiebe und gehe zu Zustand 17 über
    "/"  schiebe und gehe zu Zustand 18 über

    $default  reduziere mit Regel 1 (unit)


Zustand 12

   10 exp: "identifier" .

    $default  reduziere mit Regel 10 (exp)


Zustand 13

    5 exp: exp . "+" exp
    6    | exp . "-" exp
    7    | exp . "*" exp
    8    | exp . "/" exp
    9    | "(" exp . ")"

    "-"  schiebe und gehe zu Zustand 15 über
    "+"  schiebe und gehe zu Zustand 16 über
    "*"  schiebe und gehe zu Zustand 17 über
    "/"  schiebe und gehe zu Zustand 18 über
    ")"  schiebe und gehe zu Zustand 19 über


Zustand 14

    4 assignment: "identifier" ":=" . exp

    "("           schiebe und gehe zu Zustand 4 über
    "identifier"  schiebe und gehe zu Zustand 12 über
    "number"      schiebe und gehe zu Zustand 6 über
    "text"        schiebe und gehe zu Zustand 7 über
    "zahl"        schiebe und gehe zu Zustand 8 über
    "sign"        schiebe und gehe zu Zustand 9 über

    exp  gehe zu Zustand 20 über


Zustand 15

    6 exp: exp "-" . exp

    "("           schiebe und gehe zu Zustand 4 über
    "identifier"  schiebe und gehe zu Zustand 12 über
    "number"      schiebe und gehe zu Zustand 6 über
    "text"        schiebe und gehe zu Zustand 7 über
    "zahl"        schiebe und gehe zu Zustand 8 über
    "sign"        schiebe und gehe zu Zustand 9 über

    exp  gehe zu Zustand 21 über


Zustand 16

    5 exp: exp "+" . exp

    "("           schiebe und gehe zu Zustand 4 über
    "identifier"  schiebe und gehe zu Zustand 12 über
    "number"      schiebe und gehe zu Zustand 6 über
    "text"        schiebe und gehe zu Zustand 7 über
    "zahl"        schiebe und gehe zu Zustand 8 über
    "sign"        schiebe und gehe zu Zustand 9 über

    exp  gehe zu Zustand 22 über


Zustand 17

    7 exp: exp "*" . exp

    "("           schiebe und gehe zu Zustand 4 über
    "identifier"  schiebe und gehe zu Zustand 12 über
    "number"      schiebe und gehe zu Zustand 6 über
    "text"        schiebe und gehe zu Zustand 7 über
    "zahl"        schiebe und gehe zu Zustand 8 über
    "sign"        schiebe und gehe zu Zustand 9 über

    exp  gehe zu Zustand 23 über


Zustand 18

    8 exp: exp "/" . exp

    "("           schiebe und gehe zu Zustand 4 über
    "identifier"  schiebe und gehe zu Zustand 12 über
    "number"      schiebe und gehe zu Zustand 6 über
    "text"        schiebe und gehe zu Zustand 7 über
    "zahl"        schiebe und gehe zu Zustand 8 über
    "sign"        schiebe und gehe zu Zustand 9 über

    exp  gehe zu Zustand 24 über


Zustand 19

    9 exp: "(" exp ")" .

    $default  reduziere mit Regel 9 (exp)


Zustand 20

    4 assignment: "identifier" ":=" exp .
    5 exp: exp . "+" exp
    6    | exp . "-" exp
    7    | exp . "*" exp
    8    | exp . "/" exp

    "-"  schiebe und gehe zu Zustand 15 über
    "+"  schiebe und gehe zu Zustand 16 über
    "*"  schiebe und gehe zu Zustand 17 über
    "/"  schiebe und gehe zu Zustand 18 über

    $default  reduziere mit Regel 4 (assignment)


Zustand 21

    5 exp: exp . "+" exp
    6    | exp . "-" exp
    6    | exp "-" exp .
    7    | exp . "*" exp
    8    | exp . "/" exp

    "*"  schiebe und gehe zu Zustand 17 über
    "/"  schiebe und gehe zu Zustand 18 über

    $default  reduziere mit Regel 6 (exp)


Zustand 22

    5 exp: exp . "+" exp
    5    | exp "+" exp .
    6    | exp . "-" exp
    7    | exp . "*" exp
    8    | exp . "/" exp

    "*"  schiebe und gehe zu Zustand 17 über
    "/"  schiebe und gehe zu Zustand 18 über

    $default  reduziere mit Regel 5 (exp)


Zustand 23

    5 exp: exp . "+" exp
    6    | exp . "-" exp
    7    | exp . "*" exp
    7    | exp "*" exp .
    8    | exp . "/" exp

    $default  reduziere mit Regel 7 (exp)


Zustand 24

    5 exp: exp . "+" exp
    6    | exp . "-" exp
    7    | exp . "*" exp
    8    | exp . "/" exp
    8    | exp "/" exp .

    $default  reduziere mit Regel 8 (exp)
